--- a/style.css
+++ b/style.css
@@ -23,27 +23,14 @@ body
     transform: translateY(-50%) translateX(-50%);
     color: skyblue;
 }
-}
-
-/* mobile friendly calculator base*/
-@media (max-width: 599px)
-{
-.base
-{
-    position: absolute;
-    width: 100%;
-    height: auto;
-    color: skyblue;
-}
-}
 
 /* the input field styling */
 .textview
 {
     width: 600px;
-    height: 60px;
+    height: 20vh;
     border: 1px solid black;
-    font-size: 24px;
+    font-size: 10vh;
     padding: 5px;
     color: rgb(108, 108, 236);
     text-align: right;
@@ -54,8 +41,45 @@ body
 {
     padding: 5px;
     width: 119px;
-    height: 80px;
-    font-size: 18px;
+    height: 20vh;
+    font-size: 7vh;
     background-color: rgb(0, 0, 88);
     color: rgb(253, 103, 4);
+}
+}
+
+/* mobile friendly calculator base*/
+@media (max-width: 599px)
+{
+.base
+{
+    position: absolute;
+    width: 100%;
+    height: 800px;
+    color: skyblue;
+}
+
+/* the input field styling */
+.textview
+{
+    width: 100%;
+    height: 20vh;
+    border: 1px solid black;
+    font-size: 10vh;
+    padding: 5px;
+    color: rgb(108, 108, 236);
+    text-align: right;
+}
+
+/* button styling*/
+.button
+{
+    padding: 5px;
+    width: 20vw;
+    height: 20vh;
+    font-size: 8vh;
+    background-color: rgb(0, 0, 88);
+    color: rgb(253, 103, 4);
+}
+
 }
